src/objects/Time_Card_WMP__c.object
<CustomObject>
    <description>This object is for Service Reps to track their time to a ticket.</description>
    <fields>
        <fullName>Description_WMP__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Time_WMP__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time_WMP__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject_WMP__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Duration_WMP__c</fullName>
        <formula>Round(( End_Time_WMP__c  -  Start_Time_WMP__c ) * 1440,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_WMP__c</fullName>
        <label>Ticket</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Time Cards</relationshipLabel>
        <relationshipName>Time_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time Card</label>
    <nameField>
        <displayFormat>TC-{0000000}</displayFormat>
        <label>Time Card ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>